remove prewrap to fix titles on high dpis as well

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -318,7 +318,6 @@ color: white;
   text-overflow: ellipsis;
 
 /* Required for text-overflow to do anything */
-white-space: pre-wrap;
 overflow: hidden;
 }
 
